--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,23 +1,14 @@
 @import url("//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.530/neodgm/style.css");
+
 @import "reset.css";
-@import "status-bar.css";
+@import "variables.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 * {
   font-family: "NeoDunggeunmo";
-}
-
-.welcome-header {
-  margin: 90px 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.welcome-header__title {
-  margin-bottom: 20px;
-  font-size: 25px;
-}
-.welcome-header__text {
-  width: 60%;
-  opacity: 0.7;
 }
