--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,13 @@
+/* font */
 @import url("//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@1.530/neodgm/style.css");
 
+/* reset */
 @import "reset.css";
 @import "variables.css";
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* Screens */
 @import "screens/login.css";
