--- a/CSS/components/status-bar.css
+++ b/CSS/components/status-bar.css
@@ -1,25 +1,10 @@
 .status-bar {
   display: flex;
-  justify-content: center;
-  padding: 5px 3px;
-}
-.status-bar__column {
-  width: 33%;
-}
-.status-bar__column:first-child span {
-  margin-right: 5px;
+  justify-content: space-between;
+  padding: 20px;
 }
 
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:nth-child(3) {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.status-bar__column .fa-battery-full {
-  margin: 0px 5px;
+.status-bar__column > span {
+  font-size: 18px;
+  margin: 0px 2px;
 }
