--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -130,3 +130,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
