--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,10 +8,22 @@
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 * {
   font-family: "NeoDunggeunmo";
+}
+
+body {
+  color: #2e363e;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
