--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,10 +11,12 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/point.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
 
 * {
   font-family: "NeoDunggeunmo";
