--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,11 +12,13 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/point.css";
+@import "components/icon-row.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 * {
   font-family: "NeoDunggeunmo";
