--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,7 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/alt-screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/point.css";
@@ -19,6 +20,7 @@
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 * {
   font-family: "NeoDunggeunmo";
