--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,6 +21,7 @@
 @import "screens/find.css";
 @import "screens/more.css";
 @import "screens/settings.css";
+@import "screens/chat.css";
 
 * {
   font-family: "NeoDunggeunmo";
