--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -17,10 +17,24 @@
 }
 
 #chat-screen .alt-header {
-  top: 30px;
+  top: 10px;
   z-index: 1;
+}
+.main-chat {
+  margin-top: 150px;
 }
 
 .main-chat {
-  margin-top: 150px;
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chat__timestamp {
+  color: white;
+  background-color: #92a4b2;
+  padding: 15px;
+  font-size: 14px;
+  border-radius: 25px;
 }
