#1.18 only for mobile(using media Query)

--- a/CSS/components/icon-row.css
+++ b/CSS/components/icon-row.css
@@ -19,6 +19,7 @@
 .icon-row__icon:hover {
   cursor: pointer;
   color: #2e363e;
+  transform: translateY(-5px) scale(1.1);
 }
 .icon-row__icon i {
   font-size: 35px;
