--- a/CSS/screens/find.css
+++ b/CSS/screens/find.css
@@ -16,6 +16,9 @@
   font-size: 18px;
   color: rgba(0, 0, 0, 0.5);
 }
+.open-chat {
+  padding-bottom: 100px;
+}
 
 .open-chat__header {
   display: flex;
