--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   /* position: fixed;
   width: 100%;
   box-sizing: border-box;
