--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 500vh;
+  height: 200vh;
 }
 
 #chat-screen .alt-header,
@@ -181,7 +181,7 @@
   opacity: 0;
 }
 
-.reply:focus-within input {
+.reply input:focus {
   width: 98vw;
   transform: translateX(-13%) translateY(-80px);
 }
