--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -26,15 +26,20 @@
 }
 
 #splash-screen {
-  background-color: var(--yellow);
+  background-color: white;
   position: absolute;
   height: 100vh;
   width: 100vw;
   top: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 132px;
   animation: hideSplashScreen 0.3s ease-in-out forwards;
   animation-delay: 0.7s;
+}
+#splash-screen > span {
+  margin-top: 30px;
+  font-size: 80px;
 }
