--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,6 +14,7 @@
 @import "components/badge.css";
 @import "components/point.css";
 @import "components/icon-row.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
