--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@
 /* reset */
 @import "reset.css";
 @import "variables.css";
+@import "no-mobile.css";
 
 /* Components */
 @import "components/status-bar.css";
@@ -14,7 +15,6 @@
 @import "components/badge.css";
 @import "components/point.css";
 @import "components/icon-row.css";
-@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -29,7 +29,9 @@
 }
 
 body {
-  color: #2e363e;
+  color: var(--font-color);
+  background-color: var(--background-color);
+  transition: background-color 1s, color 1s;
 }
 
 .main-screen {
