--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -2,7 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #f9f9fa;
+  background-color: var(--nav-color);
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
@@ -13,7 +13,7 @@
 }
 .nav__link {
   position: relative;
-  color: #2e363e;
+  color: var(--font-color);
 }
 
 @keyframes notificationAnimation {
