--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -24,7 +24,7 @@
 .user-component__subtitle {
   margin-top: 8px;
   font-size: 17px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--title-color);
 }
 
 .user-component__avatar--xl {
@@ -42,7 +42,7 @@
   font-weight: 400;
 }
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--subtitle-color);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
