--- a/CSS/no-mobile.css
+++ b/CSS/no-mobile.css
@@ -2,13 +2,36 @@
   position: absolute;
   z-index: 99;
   height: 100vh;
-  background: url("/screenshots/tv_noise.jpg") center no-repeat;
+  background: url("/screenshots/color-noise.jpg") center no-repeat;
   background-size: cover;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: black;
   top: 0;
+  animation: hue 5s infinite alternate;
+}
+
+#no-mobile::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  filter: blur(5px);
+}
+
+@keyframes hue {
+  from {
+    filter: hue-rotate(0);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
 }
 .error-box {
   width: 100%;
