--- a/CSS/screens/find.css
+++ b/CSS/screens/find.css
@@ -6,7 +6,7 @@
 }
 .recommended-friends__title {
   font-size: 14px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--title-color);
 }
 
 .recommended-friends span {
@@ -14,7 +14,7 @@
   display: block;
   text-align: center;
   font-size: 18px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--title-color);
 }
 .open-chat {
   padding-bottom: 100px;
@@ -69,7 +69,7 @@
   width: 2px;
   height: 15px;
   margin: 0 5px;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--openpost-color);
 }
 
 .open-post__member-status {
