--- a/CSS/variables.css
+++ b/CSS/variables.css
@@ -21,5 +21,5 @@
   --title-color: rgba(255, 255, 255, 0.5);
   --subtitle-color: rgba(255, 255, 255, 0.4);
   --openpost-color: rgba(255, 255, 255, 0.2);
-  --nav-color: #;
+  --nav-color: #353535;
 }
