--- a/CSS/components/nav-bar.css
+++ b/CSS/components/nav-bar.css
@@ -6,6 +6,7 @@
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
+  transition: background-color 1s, color 1s;
 }
 .nav__list {
   display: flex;
